openshift/deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: okd-workshop
  labels:
    app: okd-workshop
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 0%
      maxSurge: 100%
    resources: {}
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - okd-workshop
        from:
          kind: ImageStreamTag
          name: 'okd-workshop:latest'
  replicas: 1
  test: false
  selector:
    app: okd-workshop
    deploymentconfig: okd-workshop
  template:
    metadata:
      labels:
        app: okd-workshop
        deploymentconfig: okd-workshop
    spec:
      containers:
        - name: okd-workshop
          image: >-
            openshift/okd-workshop:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
