openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    router: internal
  name: okd-workshop
spec:
  host: devops-workshop
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: okd-workshop
    weight: 100
  wildcardPolicy: None
